--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Initially taken from Github's Python gitignore file
 
+# Emacs related
+*~
+\#*\#
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
